# clientapps

./: .gitignore  Cargo.toml  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
hackernews/: Cargo.toml  Dioxus.toml
hackernews/assets/: main.css  tailwind.css
hackernews/src/: api.rs  lib.rs  main.rs
hackernews/src/ui/: mod.rs  story_comment.rs  story_item.rs
htmls/: comment.html  layout.html  main.html  story_item.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  utils.rs
