[package]
name = "hackernews"
version = "0.1.0"
authors = ["kobe4cn <kevin.yang.xgz@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
futures = "0.3.31"
futures-test = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "net", "macros", "io-util"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
